# Ictarus

./: README.md
ictarus/: Cargo.toml
ictarus/src/: config.rs  constants.rs  convert.rs  ictarus.rs  ixi.rs  lib.rs  main.rs  model.rs  network.rs
ictarus/src/model/: tangle.rs
ictarus/src/network/: listener.rs  neighbor.rs  receiver.rs  sender.rs
ictarus/tests/: random_topology_tests.rs  reference_tests.rs  simple_topology_tests.rs  transaction_request_tests.rs
ictarus/tests/common/: mod.rs
